--- a/style.css
+++ b/style.css
@@ -1,19 +1,101 @@
+body {
+  max-width: 100vw;
+  max-height: 100vh;
+  display: flex;
+  justify-content: center;
+  margin-top: 10%;
+  overflow: hidden;
+  background-image: linear-gradient(to right, rgb(78, 139, 231), rgb(145, 231, 46));
+}
+.board {
+  background-color:linear-gradient(black, white);
+  width: 65vw;
+  height: 50vh;
+  box-sizing: border-box;
+  position: inherit;
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  justify-items: center;
+  align-items: center;
+  gap: 10px;
+  border: 1px solid gray;
+  box-shadow: 15px 25px 100px black ;
+}
+
+.btnAndCube {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.result {
+  width: 100%;
+  height: 7.5vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .btn {
-    display: flex;
-    justify-content: center;
-    margin: 15px;
-  }
-  
-  img {
+  width: 100px;
+  height: 100px;
+  background-color: blue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.btn button {
+  background-color: aqua;
+  width: 100%;
+  height: 100%;
+}
+
+.player {
+  width: 100px;
+  height: 100px;
+  background-color: blue;
+  display: flex;
+  justify-content: center;
+} 
+.computer {
+  width: 100px;
+  height: 100px;
+  background-color: blue;
+  display: flex;
+  justify-content: center;
+} 
+img {
     width: 100px;
     margin: 5px;
-  }
-  
-  .cube {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    margin: 5px;
-  }
-  
-  
+}
+.cube {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.firstCube {
+  width: 100px;
+  height: 100px;
+  background-color: blue;
+  margin-right: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+}
+.secondCube {
+  width: 100px;
+  height: 100px;
+  background-color: blue;
+  margin-left: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+}
