--- a/style.css
+++ b/style.css
@@ -140,3 +140,23 @@ img {
   width: 13px;
   padding-bottom: 3px;
 }
+
+#showWinner {
+  width: 40vw;
+  height: 20vh;
+  max-width: 40vh;
+  max-height: 20vh;
+  align-content: center;
+  text-align: center;
+  border: none;
+  border-radius: 25px 0px;
+  box-shadow: 5px -5px 120px;
+  background-image: linear-gradient(to right, rgb(78, 139, 231), rgb(145, 231, 46));
+  
+}
+
+#showWinner > p {
+  color: white;
+  font-size: 2.5em;
+  font-style: italic;
+}
