Добавлена функция анимации броска кубиков и стили анимации

--- a/style.css
+++ b/style.css
@@ -84,7 +84,29 @@ h1, h2 {
   box-shadow: 5px 5px 25px;
   display: none;
   margin-bottom: 5%;
+  transition: background-color 0.2s ease;
 }
+
+#startBot:hover {
+    background-color: #0056b3;
+    border: 1px solid black;
+    cursor: pointer;
+}
+
+#startBot:active {
+    transform: translateY(1px);
+}
+
+#startPlayer:hover {
+    background-color: #0056b3;
+    border: 1px solid black;
+    cursor: pointer;
+}
+
+#startPlayer:active {
+    transform: translateY(1px);
+}
+
 
 .player {
   width: 100%;
@@ -118,6 +140,30 @@ img {
   justify-content: center;
   padding: 5%;
 }
+
+.dice {
+    width: 100px;
+    height: 100px;
+    background-color: #fff;
+    border: 5px solid #333;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #333;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+    transition: transform 0.1s ease-out;
+}
+
+.dice svg {
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+
+.dice.rolling {
+    animation: shake 0.5s infinite alternate;
+}
 .line {
   width: 30vw;
   height: 3px;
@@ -131,6 +177,7 @@ img {
   justify-content: center;
   align-items: center;
   border-radius: 20px;
+  
 }
 
 .firstCubeBot {
@@ -227,9 +274,26 @@ img {
 /*    MEDIA    */
 @media screen and (max-device-width: 480px) {
   .board {
+    
     position: relative;
     top: 15%;
-    height: 70vh;
+  }
+  .modalContent {
+    width: 80vw;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .modalContent > button {
+    width: 50vw;
+    height: 5vh;
+    font-size: 1.2em;
+  }
+  .modalContent > h2 {
+    width: 50vw;
+    height: 5vh;
+    font-size: 1.5em;
   }
   #showChoice {
     min-width: 55vw;
@@ -250,4 +314,19 @@ img {
     width: 21vw;
     height: 17%;
   }
+}
+
+
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
